--- a/ChildProcess/ChildProcess.vcxproj
+++ b/ChildProcess/ChildProcess.vcxproj
@@ -19,10 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\TestORB\ChildProcess\ChildProcess.cpp" />
-    <ClCompile Include="..\TestORB\ChildProcess\commands.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Library.VC\Nirvana\CoreImport\CoreImport.vcxproj">
       <Project>{0d8b0020-62e3-472f-be10-5400bc8183ca}</Project>
     </ProjectReference>
@@ -34,7 +30,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\TestORB\ChildProcess\commands.h" />
+    <ClCompile Include="..\TestORB\TestSystem\ChildProcess\ChildProcess.cpp" />
+    <ClCompile Include="..\TestORB\TestSystem\ChildProcess\commands.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\TestORB\TestSystem\ChildProcess\commands.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
